<resources>
    <string name="app_name">Eyoj AI Voice Changer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elon">Elon</string>
    <string name="elon_token">TM:fxq6hnfc3rht</string>
    <string name="donald">Donald</string>
    <string name="donald_token">TM:4v0ft4j72y2g</string>
    <string name="johnny">Johnny</string>
    <string name="johnny_token">TM:ca08cc0dgrdd</string>
    <string name="obama">Obama</string>
    <string name="obama_token">TM:58vtv7x9f32c</string>
    <string name="tylor_swift">Tylor</string>
    <string name="tylor_swift_token">TM:karas715w6en</string>
    <string name="benedict_cumberbatch">Benedict</string>
    <string name="benedict_cumberbatch_token">TM:hc5n0zxjzq06</string>
    <string name="will_smith">Will</string>
    <string name="will_smith_token">TM:p5t1x3hqv3tm</string>
    <string name="john_hurt">John</string>
    <string name="john_hurt_token">TM:1zb2b76szp1w</string>
    <string name="robert_downer_jr">Robert Downer Jr.</string>
    <string name="robert_downer_jr_token">TM:kp6wv0ztc0pz</string>
    <string name="robert_deniro">Robert DeNiro</string>
    <string name="robert_deniro_token">TM:msds8ma95f2f</string>
    <string name="selectable_voice_name">Elon</string>
    <string name="home_generated_list_wrote_text">BLa Bla Bla Bla</string>
    <string name="home_generated_list_voiceWho_name">Elon Mask</string>
    <string name="home_generated_list_id">00%1d Generation</string>
    <string name="song_playing_duration_time">11.00</string>
    <string name="song_playing_current_time">00.00</string>
    <string name="song_playing_share_button_text">Share</string>
    <string name="song_playing_voiceWho_name">Kanye</string>
    <string name="song_playing_ai_voices_text">AI Voice</string>
    <string name="song_playing_your_voice_is_generating">Please wait while we\'re generating your song keep app the open</string>
    <string name="generating_ai_voice">Generating \nAI Voice</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="premium">Premium</string>
    <string name="settings">Settings</string>
    <string name="continue_button_text">Continue</string>
    <string name="payment_screen_cost_price">$10</string>
    <string name="lifetime">LifeTime</string>
    <string name="reach_all_rappers_and_beats">Reach All Rappers and Beats</string>
    <string name="using_example_prompts">Using Example Prompts</string>
    <string name="limited_ads">Limited Ads</string>
    <string name="try_premium">Try Premium!</string>
    <string name="on_boarding_screen_write_prompt">&#8226;  Write a prompt &amp; get lyrics  \n&#8226;  Choose a beat  \n&#8226;  Choose your favorite rapper \n&#8226;  Share your creation</string>
    <string name="the_ultimate_rap_song_generator_experience">The ultimate \n Rap Song generator experience.</string>
    <string name="welcome_to_voice_ai_rap_generator">Welcome to Voice Ai: Rap generator</string>
    <string name="generate_a_rap_song_in_a_few_easy_steps">Generate a rap song in a few \neasy steps!</string>
    <string name="start_here">Start Here</string>
    <string name="select_ai_voice">Select AI Voice</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="max_lenght">250</string>
    <string name="max_250_character">Max 250 Character</string>
    <string name="write_your_prompts">Write your prompts</string>
    <string name="what_should_ai_character_say">What should AI character say?</string>
    <string name="ai_voices">AI Voices</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="send_email">Send email...</string>
    <string name="play_google_com_store_apps">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="check_out_this_app">Check out this cool app: https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="text_plain">text/plain</string>
    <string name="audio">audio/*</string>
    <string name="share_your_voice">Share your Voice</string>
    <string name="you_need_the_write_something">You need the write something!!!</string>
</resources>