<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".presentation.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homeGeneratedToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_marginTop="73dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settingsBackButton"
            android:layout_width="@dimen/song_playing_back_button_size"
            android:layout_height="@dimen/song_playing_back_button_size"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/song_playing_back_button_margin_start"
            android:src="@drawable/btn_back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/text_color_1"
            android:fontFamily="@font/poppins_extrabold"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/premiumTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/premium_margin_t"
        android:layout_marginHorizontal="@dimen/premium_margin_h"
        android:text="@string/premium"
        android:textAlignment="textStart"
        android:paddingHorizontal="@dimen/premium_padding_h"
        android:textStyle="bold"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/premium_text_size"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeGeneratedToolbar" />

    <TextView
        android:id="@+id/shareAppTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/premium_margin_t"
        android:layout_marginHorizontal="@dimen/premium_margin_h"
        android:text="@string/share_app"
        android:textAlignment="textStart"
        android:paddingHorizontal="@dimen/premium_padding_h"
        android:textStyle="bold"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/premium_text_size"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/premiumTextView" />

    <TextView
        android:id="@+id/rateUsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/premium_margin_t"
        android:layout_marginHorizontal="@dimen/premium_margin_h"
        android:text="@string/rate_us"
        android:textAlignment="textStart"
        android:paddingHorizontal="@dimen/premium_padding_h"
        android:textStyle="bold"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/premium_text_size"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareAppTextView" />

    <TextView
        android:id="@+id/contactUsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/premium_margin_t"
        android:layout_marginHorizontal="@dimen/premium_margin_h"
        android:text="@string/contact_us"
        android:textAlignment="textStart"
        android:paddingHorizontal="@dimen/premium_padding_h"
        android:textStyle="bold"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/premium_text_size"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateUsTextView" />

    <TextView
        android:id="@+id/termsOfServiceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/premium_margin_t"
        android:layout_marginHorizontal="@dimen/premium_margin_h"
        android:text="@string/terms_of_service"
        android:textAlignment="textStart"
        android:paddingHorizontal="@dimen/premium_padding_h"
        android:textStyle="bold"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/premium_text_size"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsTextView" />

    <TextView
        android:id="@+id/privacyPolicyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/premium_margin_t"
        android:layout_marginHorizontal="@dimen/premium_margin_h"
        android:text="@string/privacy_policy"
        android:textAlignment="textStart"
        android:paddingHorizontal="@dimen/premium_padding_h"
        android:textStyle="bold"
        android:textColor="@color/text_color_1"
        android:textSize="@dimen/premium_text_size"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsOfServiceTextView" />

    <WebView
        android:id="@+id/webView"
        android:visibility="gone"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>