<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".presentation.home.view.HomeChooseGenerateTypeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_generated_toolbar_margin_t"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/homeChooseGenerateBackButton"
            android:layout_width="@dimen/song_playing_back_button_size"
            android:layout_height="@dimen/song_playing_back_button_size"
            android:src="@drawable/btn_back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_voices"
            android:textColor="@color/text_color_1"
            android:fontFamily="@font/poppins_extrabold"
            android:textSize="@dimen/home_choose_generate_type_text_size"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/homeStartHereTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/what_should_ai_character_say"
        android:textAlignment="textStart"
        android:textColor="@color/text_color_1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_box_border"
        app:layout_constraintBottom_toTopOf="@+id/homeGenerateTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeStartHereTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/homeInputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/write_your_prompts"
                android:maxLength="250"
                android:textAlignment="textStart"
                android:textColor="@color/text_color_1"
                android:textColorHint="@color/homeHintColor"
                android:textSize="17sp"
                android:inputType="text"
                android:background="@android:color/transparent"
                app:boxBackgroundMode="none"
                app:backgroundTint="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/homeGenerateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/max_250_character"
        android:textAlignment="center"
        android:layout_marginBottom="100dp"
        android:textColor="@color/homeHintColor"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_lenght"
        android:textSize="13sp"
        android:textColor="@color/homeHintColor"
        app:layout_constraintEnd_toEndOf="@+id/homeStartHereTextView"
        app:layout_constraintTop_toTopOf="@+id/homeGenerateTextView" />

    <TextView
        android:id="@+id/selectAiVoicesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:text="@string/select_ai_voice"
        android:textAlignment="center"
        android:textColor="@color/text_color_1"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/homeGenerateTextView"
        app:layout_constraintTop_toBottomOf="@+id/homeGenerateTextView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textColor="@color/text_color_2"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="@+id/selectAiVoicesTextView"
        app:layout_constraintBottom_toBottomOf="@+id/selectAiVoicesTextView"
        app:layout_constraintEnd_toEndOf="@+id/homeStartHereTextView"
        app:layout_constraintTop_toBottomOf="@+id/homeGenerateTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeSelectableVoiceRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/homeChooseGenerateButton"
        tools:listitem="@layout/selectable_voice_recycler_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectAiVoicesTextView"/>

    <Button
        android:id="@+id/homeChooseGenerateButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_gradient"
        android:elevation="5dp"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp"
        android:shadowColor="@color/button_generate_shadow_color"
        android:shadowDx="0"
        android:shadowDy="5"
        android:layout_marginBottom="@dimen/home_generate_button_margin_b"
        android:shadowRadius="5"
        android:stateListAnimator="@null"
        android:text="Generate"
        android:textSize="17sp"
        android:textAppearance="@font/poppins"
        android:textColor="@color/text_color_white_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>