<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".presentation.splashscreen.OnBoardingScreenFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/on_boarding_image_margin_t"
        android:src="@drawable/splash_screen_mic_image"
        app:layout_constraintBottom_toTopOf="@+id/onBoardingTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/onBoardingTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintBottom_toTopOf="@+id/onBoardingScreenContinueButton">

        <TextView
            android:id="@+id/textView"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/welcome_to_voice_ai_rap_generator_margin_s"
            android:layout_marginTop="@dimen/welcome_to_voice_ai_rap_generator_margin_t"
            android:layout_marginEnd="@dimen/welcome_to_voice_ai_rap_generator_margin_e"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/welcome_to_voice_ai_rap_generator"
            android:textAlignment="center"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/welcome_to_voice_ai_rap_generator_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/welcome_to_voice_ai_rap_generator_margin_s"
            android:layout_marginTop="@dimen/welcome_to_voice_ai_rap_generator_margin_t_s"
            android:layout_marginEnd="@dimen/welcome_to_voice_ai_rap_generator_margin_e"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:text="@string/the_ultimate_rap_song_generator_experience"
            android:textAlignment="center"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/the_ultimate_rap_song_generator_experience_text_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/on_boarding_screen_write_prompt_margin_t"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:text="@string/on_boarding_screen_write_prompt"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/on_boarding_screen_write_prompt_text_size" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/onBoardingScreenContinueButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/on_boarding_screen_continue_button_height"
        android:layout_marginTop="@dimen/on_boarding_screen_continue_button_margin_t"
        android:layout_marginHorizontal="@dimen/on_boarding_screen_continue_button_margin_h"
        android:background="@drawable/button_gradient"
        android:elevation="@dimen/on_boarding_screen_continue_button_elevation"
        android:fontFamily="@font/poppins"
        android:paddingHorizontal="@dimen/on_boarding_screen_continue_button_padding_h"
        android:paddingVertical="@dimen/on_boarding_screen_continue_button_padding_v"
        android:shadowColor="@color/button_generate_shadow_color"
        android:shadowDx="0"
        android:shadowDy="5"
        android:layout_marginBottom="@dimen/on_boarding_screen_continue_button_margin_b"
        android:shadowRadius="5"
        android:stateListAnimator="@null"
        android:text="@string/continue_button_text"
        android:textAppearance="@font/poppins"
        android:textSize="17sp"
        android:textColor="@color/text_color_white_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingTextInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>